[gd_scene load_steps=10 format=3 uid="uid://b1rb5sehkrdlt"]

[ext_resource type="Script" path="res://player.gd" id="1_2256w"]
[ext_resource type="Texture2D" uid="uid://c2n7f82relpvr" path="res://sprites/player1_idle.png" id="2_qvgpm"]
[ext_resource type="Texture2D" uid="uid://boitxgarof5im" path="res://sprites/player1_shoot.png" id="3_8be6j"]
[ext_resource type="Texture2D" uid="uid://cgvkmnlsoj45a" path="res://sprites/player2_idle.png" id="4_07f7d"]
[ext_resource type="Texture2D" uid="uid://r3n3qid8syvs" path="res://sprites/player2_shoot.png" id="5_1c02f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_37kp7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qvgpm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8be6j")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xinhw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_07f7d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1c02f")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ggm6"]
size = Vector2(32, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pp5jk"]
size = Vector2(32, 208)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_2256w")

[node name="SpritesPlayer1" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_37kp7")
animation = &"idle"
autoplay = "idle"

[node name="SpritesPlayer2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-32, 0)
sprite_frames = SubResource("SpriteFrames_xinhw")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-16, -44)
shape = SubResource("RectangleShape2D_5ggm6")

[node name="bounce_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce_area"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_pp5jk")
debug_color = Color(0.968627, 0, 0.458824, 0.419608)

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="body_entered" from="bounce_area" to="." method="_on_bounce_area_body_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
